Old changes. For reference only
Signed-off-by: John Dennehy <8093939+John-Dennehy@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["datetime", "groupfinder", "planetscale", "varchar"]
+  "cSpell.words": [
+    "clsx",
+    "datetime",
+    "groupfinder",
+    "hookform",
+    "nextui",
+    "planetscale",
+    "varchar"
+  ]
 }
