--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,24 +12,41 @@
     "db:view": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
-    "@planetscale/database": "^1.8.0",
+    "@hookform/resolvers": "^3.3.1",
+    "@nextui-org/react": "^2.1.13",
+    "@planetscale/database": "^1.11.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.35.3",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.27.0",
+    "drizzle-orm": "^0.27.2",
+    "drizzle-zod": "^0.4.4",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.261.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.1.6",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
-    "drizzle-kit": "^0.19.3"
+    "drizzle-kit": "^0.19.13",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
