--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["datetime", "groupfinder", "planetscale", "varchar"]
+  "cSpell.words": [
+    "datetime",
+    "groupfinder",
+    "nextui",
+    "planetscale",
+    "varchar"
+  ]
 }
