--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:view": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "@planetscale/database": "^1.11.0",
     "@types/node": "20.8.2",
     "@types/react": "18.2.24",
@@ -21,6 +22,7 @@
     "drizzle-orm": "^0.28.6",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
+    "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
