--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "eslint-config-next": "13.5.4",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
-    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
     "drizzle-kit": "^0.19.13",
-    "eslint-config-prettier": "^9.0.0"
+    "eslint-config-prettier": "^9.0.0",
+    "postcss": "8.4.31",
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "3.3.3"
   }
 }
