--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
     "framer-motion": "^10.16.4",
+    "mysql2": "^3.6.1",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
