--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.16",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
+    "drizzle-valibot": "^0.1.1",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
     "framer-motion": "^10.16.4",
@@ -32,6 +33,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "drizzle-kit": "^0.19.13",
     "eslint-config-prettier": "^9.0.0",
