update .vscode settings
Signed-off-by: John Dennehy <8093939+John-Dennehy@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "cSpell.words": [
     "datetime",
     "groupfinder",
+    "hookform",
     "nextui",
     "planetscale",
+    "valibot",
     "varchar"
   ],
   "css.customData": [".vscode/tailwind.json"],
@@ -13,5 +15,11 @@
   "editor.quickSuggestions": {
     "strings": "on"
   },
-  "tailwindCSS.classAttributes": ["class", "className", "classNames", "ngClass"]
+  "tailwindCSS.classAttributes": [
+    "class",
+    "className",
+    "classNames",
+    "ngClass"
+  ],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
