--- a/package.json
+++ b/package.json
@@ -12,36 +12,47 @@
     "db:view": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.1.13",
+    "@catppuccin/palette": "^0.2.0",
+    "@nextui-org/react": "^2.2.9",
     "@planetscale/database": "^1.11.0",
-    "@types/node": "20.8.2",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.8",
-    "autoprefixer": "10.4.16",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
+    "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "drizzle-valibot": "^0.1.1",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.4",
-    "framer-motion": "^10.16.4",
-    "mysql2": "^3.6.1",
-    "next": "14.0.1",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^13.5.6",
+    "framer-motion": "^10.16.7",
+    "mysql2": "^3.6.5",
+    "next": "^14.0.3",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.47.0",
-    "react-icons": "^4.11.0",
-    "typescript": "5.2.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "drizzle-kit": "^0.19.13",
     "eslint-config-prettier": "^9.0.0",
-    "postcss": "8.4.31",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
-    "tailwindcss": "3.3.3"
+    "prettier": "^3.1.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwindcss": "^3.3.5"
+  },
+  "prettier": {
+    "semi": false,
+    "singleAttributePerLine": false,
+    "proseWrap": "always",
+    "plugins": [
+      "prettier-plugin-organize-imports",
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
