--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@/db": ["./src/server/db/index.ts"],
-      "@/db/*": ["./src/server/db/*"],
-      "@/components/*": ["./src/server/components/*"],
-      "@/components/client/*": ["./src/client/components/*"],
-      "@/components/server/*": ["./src/server/components/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
