--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
-    "drizzle-valibot": "^0.1.1",
+    "drizzle-zod": "^0.5.1",
     "eslint": "^8.54.0",
     "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.16.7",
     "mysql2": "^3.6.5",
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
+    "postcode": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
