--- a/package.json
+++ b/package.json
@@ -14,42 +14,46 @@
   "dependencies": {
     "@catppuccin/palette": "^0.2.0",
     "@nextui-org/react": "^2.2.9",
-    "@planetscale/database": "^1.11.0",
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.39",
+    "@planetscale/database": "^1.13.0",
+    "@tanstack/react-table": "^8.10.7",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "drizzle-zod": "^0.5.1",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "eslint-config-next": "^13.5.6",
-    "framer-motion": "^10.16.7",
+    "framer-motion": "^10.16.16",
     "mysql2": "^3.6.5",
-    "next": "^14.0.3",
+    "nanoid": "^5.0.4",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "postcode": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
-    "typescript": "^5.3.2",
+    "typescript": "^5.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "drizzle-kit": "^0.19.13",
-    "eslint-config-prettier": "^9.0.0",
-    "postcss": "^8.4.31",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.32",
     "postcss-cli": "^10.1.0",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5"
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.6"
   },
   "prettier": {
     "semi": false,
+    "trailingComma": "all",
+    "printWidth": 120,
     "singleAttributePerLine": false,
     "proseWrap": "always",
     "plugins": [
