Update cSpell.words in settings.json
Signed-off-by: John Dennehy <8093939+John-Dennehy@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,5 @@
 {
-  "cSpell.words": [
-    "catppuccin",
-    "datetime",
-    "groupfinder",
-    "hookform",
-    "nextui",
-    "planetscale",
-    "valibot",
-    "varchar"
-  ],
+  "cSpell.words": ["catppuccin", "datetime", "groupfinder", "hookform", "nextui", "planetscale", "sonner", "valibot", "varchar"],
   "css.customData": [".vscode/tailwind.json"],
   "files.associations": {
     "*.css": "tailwindcss"
